--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,14 @@
   "version": "0.0.0",
   "description": "",
   "author": "Andrei Telteu <andrei@telteu.ro>",
-  "keywords": ["phpmyadmin", "mysql", "php", "solid", "go", "wails"],
+  "keywords": [
+    "phpmyadmin",
+    "mysql",
+    "php",
+    "solid",
+    "go",
+    "wails"
+  ],
   "scripts": {
     "start": "vite",
     "dev": "vite",
@@ -18,6 +25,7 @@
   },
   "dependencies": {
     "solid-js": "^1.8.11",
-    "solid-styled-components": "^0.28.5"
+    "solid-styled-components": "^0.28.5",
+    "solidjs-storex": "^1.0.6"
   }
 }
